# vector-xlite

./: .gitignore  Cargo.toml  README.md  protoc_gen.sh
.github/workflows/: ci-crate-publish.yml  ci-go.yml  ci-main.yml  ci-rust.yml  rust.yml
console/: Cargo.toml
console/src/: main.rs
console_exmples/go_examples/: main.go
console_exmples/rust_examples/: Cargo.toml
console_exmples/rust_examples/src/: complex_example.rs
distributed/cluster/: go.mod
distributed/cluster/cmd/cli/: main.go
distributed/cluster/cmd/node/: main.go
distributed/cluster/cmd/server/: main.go
distributed/cluster/pkg/client/: client.go
distributed/cluster/pkg/consensus/: commands.go  fsm.go  raft.go
distributed/cluster/pkg/pb/: cluster.pb.go  (+1 more)
distributed/cluster/scripts/: start_cluster.sh  stop_cluster.sh
docs/: NEW_STRUCTURE.md
docs/migration/: CRATE_UPDATES.md  MIGRATION_SUMMARY.md  THREE_MODE_MIGRATION_COMPLETE.md
embedded/: README.md
embedded/core/: Cargo.toml
embedded/core/src/: vector_xlite.rs
embedded/core/src/constant/: constant.rs
embedded/core/src/error/: error.rs
embedded/core/src/executor/: query_executor.rs  sqlite_query_executor.rs
embedded/core/src/helper/: row_parser.rs  tests.rs
embedded/core/src/planner/: mod.rs  query_planner.rs  sqlite_query_planner.rs
embedded/core/src/snapshot/: exporter.rs  importer.rs  sqlite_backup.rs  types.rs
embedded/core/src/types/: collection_config.rs  delete_collection.rs  delete_point.rs  mod.rs  query_plan.rs
embedded/examples/rust/: Cargo.toml
example/: Cargo.toml
example/src/: complex_example.rs  main.rs
grpc_proto/: cluster.proto  vectorxlite.proto
proto/: vectorxlite.proto
proto/cluster/v1/: cluster.proto
proto/vectorxlite/v1/: vectorxlite.proto
scripts/: generate-protos.sh  migrate_structure.sh  test_all_modes.sh
sqlite-vectorx/: Cargo.toml
sqlite-vectorx/assets/: vectorlite.dylib
sqlite-vectorx/src/: lib.rs  sqlite_vectorx.rs
sqlite-vectorx/src/executors/: mod.rs
sqlite-vectorx/src/helpers/: sql_helpers.rs
sqlite-vectorx/src/planners/: mod.rs
standalone/clients/go/: .vector_xlite_pids  go.mod
standalone/examples/go/: go.mod  main.go
standalone/server/: Cargo.toml  build.rs
standalone/server/src/: conversions.rs  vector_xlite_grpc.rs
tests/: README.md
tests/distributed/: README.md  go.mod  integration_test.go  run_tests.sh
tests/embedded/tests/: builder_tests.rs  collection_exists_tests.rs  delete_collection_tests.rs  delete_entry_tests.rs  snapshot_tests.rs
tests/integration/: Cargo.toml
tests/integration/tests/: atomic_transaction_tests.rs  complex_integration.rs  concurrent_tests.rs  edge_case_tests.rs  error_handling_tests.rs  framework_demo_tests.rs  sql_helper_tests.rs
tests/integration/tests/common/: assertions.rs  fixtures.rs  prelude.rs
tests/standalone/: README.md  go.mod  integration_test.go  run_tests.sh
tools/: .gitignore  .vector_xlite_pids  requirements.txt
tools/docs/: README.md
tools/python/: generate_protos.py  setup.py  start_cluster.py  stop_cluster.py  test_all_modes.py  test_collection_exists.py  test_operations.py
vector_xlite/: Cargo.toml  clippy.toml
vector_xlite/src/: lib.rs  vector_xlite.rs
vector_xlite/src/constant/: constant.rs  mod.rs
vector_xlite/src/customizer/: mod.rs  sqlite_connection_customizer.rs
vector_xlite/src/error/: error.rs
vector_xlite/src/executor/: mod.rs  query_executor.rs  sqlite_query_executor.rs
vector_xlite/src/helper/: extension_loader.rs  extension_loaders.rs  mod.rs  names.rs  sql_helper.rs  sql_helpers.rs
vector_xlite/src/planner/: mod.rs  query_planner.rs  sqlite_query_planner.rs
vector_xlite/src/snapshot/: mod.rs
vector_xlite/src/types/: collection_config.rs  enums.rs  insert_point.rs  search_point.rs
vector_xlite_go_client/: commands.sh  go.mod
vector_xlite_go_client/client/: snapshot.go
vector_xlite_go_client/pb/: vectorxlite.pb.go  vectorxlite_grpc.pb.go
vector_xlite_go_client/types/: collection_config.go  distance_func.go  insert_point.go  search_point.go  search_result.go  snapshot.go
vector_xlite_grpc/: Cargo.toml  build.rs
vector_xlite_grpc/proto/: vectorxlite.proto
vector_xlite_grpc/src/: main.rs  vector_xlite_grpc.rs
vector_xlite_grpc_server/: .env  Cargo.toml  Dockerfile  build.rs
vector_xlite_grpc_server/src/: conversions.rs  lib.rs  main.rs  vector_xlite_grpc.rs
vector_xlite_proxy/: .gitignore  README.md  go.mod  go.sum
vector_xlite_proxy/cmd/client/: main.go
vector_xlite_proxy/docs/: FOLDER_STRUCTURE.md  Final folders  Roadmap.md  TOPOLOGY.md
vector_xlite_proxy/pkg/client/: interceptor.go
vector_xlite_proxy/pkg/consensus/: fsm.go  raft.go
vector_xlite_proxy/pkg/pb/: cluster.pb.go
vector_xlite_proxy/pkg/server/: interceptor.go
vector_xlite_proxy/scripts/: start_cluster.sh  test_operations.sh
vector_xlite_tests/: Cargo.toml
vector_xlite_tests/tests/: atomic_transaction_tests.rs  complex_integration.rs  concurrent_tests.rs  distance_function_tests.rs  file_storage_tests.rs
(+9 files in other folders)
