[workspace]
members = [
    "embedded/core",
    "embedded/examples/rust",
    "standalone/server",
    "tests/integration",
]
resolver = "2"

[workspace.package]
version = "1.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/uttom-akash/vector-xlite"
authors = ["Uttom Akash <uttom.akash71@gmail.com>"]

[workspace.dependencies]
# Shared dependencies
rusqlite = { version = "0.37", features = ["load_extension", "backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.31"
regex = "1.12"
once_cell = "1.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.11"
prost = "0.12"
