[package]
name = "vector_xlite_grpc"
version = "0.1.0"
edition = "2024"


[dependencies]
tonic = "0.14.2"
prost = "0.14"
tonic-prost = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
vector_xlite = "0.2.2"
rusqlite = { version = "0.37.0", features = ["load_extension" ]}

[build-dependencies]
tonic-prost-build = "*"


