[package]
name = "vector_xlite"
version = "1.3.0"
edition = "2021"
authors = ["Uttom Akash <uttom.akash71@gmail.com>"]
description = "VectorXLite: A fast and lightweight SQLite extension for vector search with payload support."
license = "MIT OR Apache-2.0"
repository = "https://github.com/uttom-akash/vector-xlite"
readme = "../README.md"
keywords = ["vector", "sqlite", "payload", "database", "hnsw"]
categories = ["database", "development-tools"]
homepage = "https://github.com/uttom-akash/vector-xlite"
documentation = "https://docs.rs/vector_xlite"

[dependencies]
rusqlite = { version = "0.37.0", features = ["load_extension", "backup"] }
regex = "1.12.2"
once_cell = "1.21.3"
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.31.0"}

